feat: refact forgot password

--- a/env.example
+++ b/env.example
@@ -19,3 +19,14 @@ DB_DATABASE=agendoo
 JWT_SECRET=dev-secret-change-in-production
 JWT_EXPIRES_IN=7d
 
+# Email SMTP (para recuperação de senha)
+# Gmail: Use "Senha de App" em https://myaccount.google.com/apppasswords
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=seu-email@gmail.com
+SMTP_PASS=sua-senha-de-app
+SMTP_FROM="Agendoo <noreply@agendoo.com>"
+
+# URL do Frontend (para links de email)
+FRONTEND_URL=http://localhost:4200
+
