--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.5",
+    "nodemailer": "^7.0.11",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -53,6 +54,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
